2009-01-30 Og Maciel <ogmaciel@gnome.org>

	* src/gui/prefdialog.py: Handle missing gconf data when not installed.
	* src/gui/widgets/datepicker.py: Don't trigger calendar widget event.

2009-01-25 Og Maciel <ogmaciel@gnome.org>

	* src/gui/widgets/timeline.py: Started work to handle bullets with multiple
	status.
	* src/gui/maindialog.py: Removed white space.

2009-01-01 Og Maciel <ogmaciel@gnome.org>

	* po/POTFILES.skip: Added calendarwidget.py.
	* src/gui/widgets/timeline.py: CTRL mask fix by Luiz Armesto.
	* NEWS: Entries for the new datepicker and timeline widgets.

2008-12-20 Og Maciel <ogmaciel@gnome.org>

	* src/gui/adddialog.py: Notify user when the end date is prior to start date.
	* src/gui/maindialog.py: Convert datetime.date to datetime.datetime when
	 passing the date from timeline.

2008-12-18 Og Maciel <ogmaciel@gnome.org>

	* src/lib/scheduler.py: Handle end dates set in the past and added tests.

2008-11-20 Og Maciel <ogmaciel@gnome.org>

	* src/gui/adddialog.py: Handle adding repeating records.
	* src/gui/widgets/datepicker.py: Emmit signal when data is changed.
	* src/gui/widgets/genericlistview.py: Reverted r645. Fixes b.g.o #561751.
	* src/gui/maindialog.py: Code cleanup; update endDate when dueDate is changed.
	* src/lib/scheduler.py: Code cleanupand improvements for date handling functions.

2008-11-19 Og Maciel <ogmaciel@gnome.org>

	* src/gui/adddialog.py: Make 'notes' widget scroll when number of lines go beyond the widget's
	 height. Fixes b.g.o #561550.

2008-11-18 Og Maciel <ogmaciel@gnome.org>

	* src/gui/categoriesdialog.py: Only select an item if we have data.
	* src/gui/adddialog.py: toggle widgets sensibility based on presence
	 of passed record or not; Added DatePicker widgets for Due Date
	 and End Date; Set the date for DatePicker using the set_date method;
	 Select date from DatePicker widget using get_date method; Handle 
	 endDateLabel sensitivity based on selection of frequency.